--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,47 @@
 version: '3.7'
 
 services:
-  # db:
-  #   image: postgres
-  #   environment:
-  #     POSTGRES_USER: ${POSTGRES_USER}
-  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  #     POSTGRES_DB: ${POSTGRES_DB}
-  #   ports:
-  #     - "5432:5432"
+  base_image:
+      image: base_image
+      build: .
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
 
-  # backend:
-  #   build: ./backend
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - "${BACKEND_PORT}:${BACKEND_PORT}"
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     - BACKEND_PORT=${BACKEND_PORT}
-  #     # - POSTGRES_HOST=${POSTGRES_HOST}
-  #     - DATABASE_URL=${DATABASE_URL}
-  #   command: bash -c "alembic upgrade head && python /app/app.py"
+  backend:
+    build: ./backend
+    env_file:
+      - .env
+    ports:
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
+    depends_on:
+      - base_image
+      - db
+    environment:
+      - BACKEND_PORT=${BACKEND_PORT}
+      # - POSTGRES_HOST=${POSTGRES_HOST}
+      - DATABASE_URL=${DATABASE_URL}
+    command: bash -c "alembic upgrade head && python /app/app.py"
 
   frontend:
     image: frontend
-    build: .
+    build: ./frontend
+    # dockerfile: ./frontend/Dockerfile
     env_file:
       - .env
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+    # command: run /app/streamlit_app.py --server.address 0.0.0.0 --server.port ${FRONTEND_PORT}
     command: run /app/app.py --server.address 0.0.0.0 --server.port ${FRONTEND_PORT}
     volumes:
       - ./videos:/app/videos
+    depends_on:
+      - base_image
+      - backend
+
+  
